# threatconnect-cli

./: .env.example  .gitignore  IMPLEMENTATION_ORDER.md  MODERNIZATION_PLAN.md  PR_DESCRIPTION.md  README.md  owners.py  package.json  requirements.txt  tc-indicator.py
legacy/: ARCHITECTURE.md  owners.py
openspec/: 01-data-aggregation.md  02-ui-layout.md  03-visual-polish.md  04-search-filters.md  SPEC-01-data-aggregation.md  SPEC-02-ui-layout.md  project.md
src/: main.rs  tui.rs
src/logic/: aggregation.rs  tests.rs
src/models/: indicator.rs  search.rs
tc-tui-rs/: Cargo.toml
tc-tui-rs/src/: main.rs  tui.rs
tc-tui-rs/src/logic/: aggregation.rs  mod.rs  tests.rs
tc-tui-rs/src/models/: common.rs  indicator.rs  mod.rs  search.rs
tc_tui/: __init__.py
tc_tui/api/: __init__.py  auth.py  client.py  exceptions.py  groups.py  indicators.py
tc_tui/config/: README.md
tc_tui/models/: common.py  group.py  indicator.py  search.py
tc_tui/search/: exceptions.py
tc_tui/state/: __init__.py  history.py
tc_tui/utils/: __init__.py  cache.py  formatters.py  icons.py
tc_tui/widgets/: __init__.py  detail_view.py  results_table.py  search_input.py  status_bar.py
tests/: __init__.py
work_packages/: PACKAGE_1_DATA_MODELS.md  PACKAGE_2_API_CLIENT.md  PACKAGE_3_CONFIGURATION.md  PACKAGE_4_UTILITIES.md  PACKAGE_5_SEARCH_ENGINE.md  PACKAGE_6_STATE_MANAGER.md  PACKAGE_7A_WIDGET_SEARCH_INPUT.md  PACKAGE_7B_WIDGET_RESULTS_TABLE.md  PACKAGE_7C_WIDGET_DETAIL_VIEW.md  PACKAGE_7D_WIDGET_STATUS_BAR.md  PACKAGE_8_SCREENS.md  PACKAGE_9_MAIN_APP.md  README.md
(+43 files in other folders)
